try to fix header jumping

--- a/src/blocks/header/header.styl
+++ b/src/blocks/header/header.styl
@@ -39,6 +39,7 @@
 		right 0
 		left 0
 		height auto
+		transform translate3d(0, 0, 0)
 		z-index 10
 	&__wrap
 		display flex
